# backend/swagger-output.json
@@ -5,7 +5,7 @@
     "description": "API documentation",
     "version": "1.0.0"
   },
-  "host": "localhost:4999",
+  "host": "localhost:4000",
   "basePath": "/",
   "schemes": [
     "http"
@@ -16,6 +16,13 @@
         "description": "",
         "produces": [
           "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "x-forwarded-proto",
+            "in": "header",
+            "type": "string"
+          }
         ],
         "responses": {
           "200": {
